Add relevant dependencies and automation tests